force-app/main/default/objects/Account/fields/AI_Analysis_Type__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis_Type__c</fullName>
    <label>AI Analysis Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>