force-app/main/default/objects/Account/fields/AI_Last_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Last_Analysis__c</fullName>
    <label>AI Last Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>