force-app/main/default/objects/Account/fields/AI_Last_Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_Last_Analysis_Date__c</fullName>
    <label>AI Last Analysis Date</label>
    <type>DateTime</type>
</CustomField>